update start script: add Gunicorn process to serve Flask app, create dynamic Nginx configuration from template, and update nixpacks to use the new script

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -3,4 +3,5 @@
 cmds = ["echo 'Building...'"]
 
 [start]
-cmd = "nginx -g 'daemon off;'"
+# ИЗМЕНЕНИЕ: Запускаем наш стартовый скрипт вместо голого Nginx
+cmd = "sh start.sh"
